watch/qbittorrent/statefulset-vpn.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent-vpn
  labels:
    app: qbittorrent-vpn
spec:
  replicas: 1
  serviceName: qbittorrent-vpn
  selector:
    matchLabels:
      app: qbittorrent-vpn
  template:
    metadata:
      labels:
        app: qbittorrent-vpn
    spec:
      nodeName: nereid-1
      containers:
        # Torrent client
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: utp
              containerPort: 32222
          resources:
            requests:
              cpu: 100m
              memory: 8Gi
            limits:
              cpu: "2"
              memory: 12Gi
          volumeMounts:
            - mountPath: /data/torrents
              name: media
              subPath: torrents
            - mountPath: /config
              name: qbittorrent-config

        # VPN
        - name: vpn
          image: qmcgaw/gluetun:v3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: "1"
              memory: 400Mi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-vpn-config

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn
  labels:
    app: qbittorrent-vpn
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-vpn
  ports:
    - name: http
      port: 80
      targetPort: http
